gatekeeper/constraints/k8srequirelimits-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirelimits
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sRequireLimits
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequirelimits

      violation[{"msg": msg}] {
        container := containers[_]
        not container.resources.limits
        msg := sprintf("container %q must define resources.limits", [container.name])
      }

      containers[container] {
        input.review.kind.kind == "Pod"
        container := input.review.object.spec.containers[_]
      }

      containers[container] {
        input.review.kind.kind != "Pod"
        container := input.review.object.spec.template.spec.containers[_]
      }
